init multi language string

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,7 +2,6 @@
 <resources>
     <string name="app_name">Cognitiveldentify</string>
     <string name="detect">Detect Face</string>
-    <string name="indentify">Identify Face</string>
     <string name="dt_failed">Detection failed !</string>
     <string name="dt_no">Detection Finished. Nothing detected</string>
     <string name="dt_ok">Detection Finished. %d face(s) detected</string>
@@ -10,4 +9,5 @@
     <string name="dt">Detecting...</string>
     <string name="ident_pers_stt">Getting person group status...</string>
     <string name="identify">Identify Face</string>
+    <string name="img_desc">Test Image</string>
 </resources>
