--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Cognitiveldentify</string>
+    <string name="app_name">Detect Emotion</string>
     <string name="detect">Detect Face</string>
     <string name="dt_failed">Detection failed !</string>
     <string name="dt_no">Detection Finished. Nothing detected</string>
@@ -26,4 +26,7 @@
     <string name="action_settings">Settings</string>
     <string name="change_lang">Change language</string>
     <string name="help">Help</string>
+    <string name="choose_lang">Choose language</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="app_ver">Version 1.0.430</string>
 </resources>
