--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,15 +17,9 @@
     <string name="neutral">Trung lập</string>
     <string name="sadness">Buồn bã</string>
     <string name="surprise">Ngạc nhiên</string>
-    <string name="title_activity_main2">Main2Activity</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
     <string name="action_settings">Thiết lập</string>
-    <string name="section_format">Hello World from section: %1$d</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tab_emotion">Cảm xúc</string>
     <string name="tab_roll_call">Điểm danh</string>
     <string name="tab_faceid">Nhận dạng</string>
@@ -33,22 +27,11 @@
     <string name="about">Thông tin</string>
     <string name="change_lang">Thay đổi ngôn ngữ</string>
     <string name="help">Trợ giúp</string>
-    <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
         <item>Always</item>
         <item>When possible</item>
@@ -61,9 +44,7 @@
     </string-array>
 
     <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
 
-    <string name="pref_title_sync_frequency">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
         <item>30 minutes</item>
@@ -95,22 +76,13 @@
 
     <string-array name="multi_select_list_preference_default_value" />
 
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
     <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
 
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
-    <string name="app_descrip">Úng dụng hỗ trợ nhận diện cảm xúc, xác minh người dùng dựa trên ảnh chụp.</string>
-    <string name="app_credits">Ứng dụng được viết bởi Dương Hàn và Hải Cao</string>
+    <string name="app_descrip" translatable="false">Ứng dụng hỗ trợ nhận diện cảm xúc, xác minh người dùng dựa trên ảnh chụp.</string>
+    <string name="app_credits" translatable="false">Ứng dụng được viết bởi Dương Hàn và Hải Cao</string>
     <string name="app_ver">Phiên bản 1.0.430</string>
     <string name="app_cpr" translatable="false">Copyright © 2018</string>
-    <string name="help_tip"><b>Hướng dẫn sử dụng phần mềm Nhận diện cảm xúc.</b>\n
+    <string name="help_tip" translatable="false"><b>Hướng dẫn sử dụng phần mềm Nhận diện cảm xúc.</b>\n
         <li><i>Yêu cầu có kết nối Internet.</i></li>\n
         <li>Chụp hình hoặc chọn hình trong thư viện ảnh.</li>\n
         <li>Chọn nút phát hiện khuôn mặt và xác nhận để hiển thị cảm xúc hiện tại.</li>\n
@@ -118,4 +90,16 @@
         <li>Thay đổi ngôn ngữ trong phần thiết lập.</li>\n
 
     </string>
+
+    <string name="title_activity_settings">Thiết lập</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+
+    <!-- Example settings for Data & Sync -->
+
+    <!-- Example settings for Notifications -->
+
+    <string name="choose_lang">Chọn ngôn ngữ</string>
 </resources>
