--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -29,6 +29,7 @@
     <string name="choose_lang">Choisissez la langue</string>
     <string name="title_activity_settings">Paramètres</string>
     <string name="app_ver">Version 1.0.430</string>
+    <string name="gallery">Galerie</string>
 
 
     Détection terminée. Rien n'a été détecté
