--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -29,4 +29,5 @@
     <string name="choose_lang">Sprache wählen</string>
     <string name="title_activity_settings">die Einstellungen</string>
     <string name="app_ver">Version 1.0.430</string>
+    <string name="gallery">Galerie</string>
 </resources>
