--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -29,4 +29,5 @@
     <string name="choose_lang">Choose language</string>
     <string name="title_activity_settings">Settings</string>
     <string name="app_ver">Version 1.0.430</string>
+    <string name="gallery">Gallery</string>
 </resources>
