--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -29,4 +29,5 @@
     <string name="choose_lang">言語を選択</string>
     <string name="title_activity_settings">設定</string>
     <string name="app_ver">バージョン 1.0.430</string>
+    <string name="gallery">ギャラリー</string>
 </resources>
