--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -29,4 +29,5 @@
     <string name="choose_lang">Chọn ngôn ngữ</string>
     <string name="app_ver">Phiên bản 1.0.430</string>
     <string name="title_activity_settings">Thiết lập</string>
+    <string name="gallery">Thư viện</string>
 </resources>
