--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -30,4 +30,23 @@
     <string name="title_activity_settings">Configuraciones</string>
     <string name="app_ver">Versión 1.0.430</string>
     <string name="gallery">Galería</string>
+    <string-array name="select_item">
+        <item>Tomar foto</item>
+        <item>Elegir de la galería</item>
+        <item>Cancelar</item>
+    </string-array>
+
+    <string name="app_descrip">Application Support Emotion Detection, verificando al usuario en base a la instantánea.</string>
+    <string name="app_credits">Esta aplicación es creada por Dương Hàn y Hải Cao</string>
+    <string name="app_ver">Version 1.0.430</string>
+    <string name="app_cpr">Derechos de autor © 2018</string>
+    <string name="help_tip"><b>Manual de usuario</b>\n
+        <li><i>Requiere conexión a internet</i></li>\n
+        <li>Tome una foto o seleccione una imagen en su biblioteca de fotos.</li>\n
+        <li>Haga clic en el botón de detección de rostros, luego identifique el botón y confirme para mostrar la emoción actual.</li>\n
+        <li>Acerca el zoom para hacerlo más visible.</li>\n
+        <li>Cambia el idioma en la configuración.</li>\n
+
+    </string>
+    <string name="add_photo">Añadir foto</string>
 </resources>
