--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -30,28 +30,23 @@
     <string name="title_activity_settings">Paramètres</string>
     <string name="app_ver">Version 1.0.430</string>
     <string name="gallery">Galerie</string>
+    <string-array name="select_item">
+        <item>Prendre une photo</item>
+        <item>Choisir parmi la galerie</item>
+        <item>Annuler</item>
+    </string-array>
 
+    <string name="app_descrip">Application Support Emotion Detection, vérifiant l'utilisateur en fonction de l'instantané.</string>
+    <string name="app_credits">Cette application est créée par Dương Hàn et Hải Cao</string>
+    <string name="app_ver">Version 1.0.430</string>
+    <string name="app_cpr">droits d'auteur © 2018</string>
+    <string name="help_tip"><b>Manuel utilisateur</b>\n
+        <li><i>Nécessite une connexion Internet.</i></li>\n
+        <li>Prenez une photo ou sélectionnez une photo dans votre photothèque.</li>\n
+        <li>Cliquez sur le bouton de détection de visage puis identifiez le bouton et confirmez pour afficher l'émotion actuelle.</li>\n
+        <li>Zoomez pour le rendre plus visible.</li>\n
+        <li>Changez la langue dans les paramètres.</li>\n
 
-    Détection terminée. Rien n'a été détecté
-    Détection terminée. % d visage (s) détecté (s)
-    Détection terminée. Terminé
-    Détecter ...
-    Obtention du statut de groupe de personnes ...
-    Image de test
-    Colère
-    Mépris
-    Dégoûter
-    Peur
-    Bonheur
-    Neutre
-    Tristesse
-    Surprise
-    Paramètres
-    Émotion
-    Appel
-    Cognitif
-    Paramètres
-    Sur
-    Changer de langue
-    Aidez-moi
+    </string>
+    <string name="add_photo">Ajouter une photo</string>
 </resources>
