--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -30,4 +30,24 @@
     <string name="app_ver">Phiên bản 1.0.430</string>
     <string name="title_activity_settings">Thiết lập</string>
     <string name="gallery">Thư viện</string>
+    <string-array name="select_item">
+        <item>Chụp ảnh</item>
+        <item>Chọn từ thư viện</item>
+        <item>Trở về</item>
+    </string-array>
+
+    <string name="app_descrip">Ứng dụng hỗ trợ nhận diện cảm xúc, xác minh người dùng dựa trên ảnh chụp.</string>
+    <string name="app_credits">Ứng dụng được viết bởi Dương Hàn và Hải Cao</string>
+    <string name="app_ver">Phiên bản 1.0.430</string>
+    <string name="app_cpr">Copyright © 2018</string>
+    <string name="help_tip"><b>Hướng dẫn sử dụng phần mềm Nhận diện cảm xúc.</b>\n
+        <li><i>Yêu cầu có kết nối Internet.</i></li>\n
+        <li>Chụp hình hoặc chọn hình trong thư viện ảnh.</li>\n
+        <li>Chọn nút phát hiện khuôn mặt và xác nhận để hiển thị cảm xúc hiện tại.</li>\n
+        <li>Phóng to thu nhỏ để hiển thị rõ ràng hơn.</li>\n
+        <li>Thay đổi ngôn ngữ trong phần thiết lập.</li>\n
+
+    </string>
+    
+    <string name="add_photo">Thêm ảnh</string>
 </resources>
